Some font and text align fixes.

--- a/app/assets/stylesheets/_general.sass
+++ b/app/assets/stylesheets/_general.sass
@@ -1,8 +1,8 @@
 body
-  font: 14px normal Arial, sans-serif
+  font: normal 14px Arial, sans-serif
 
 th, td, input, textarea, .dummy, select, option
-  :font-size 0.9em
+  font: normal 0.9em Arial, sans-serif
 
 a, h1, h2, h3
   :font-weight bold
