--- a/app/assets/stylesheets/invoice.sass
+++ b/app/assets/stylesheets/invoice.sass
@@ -5,7 +5,7 @@
 
 
 body
-  font: 13px normal "Times"
+  font: normal 13px "Times"
 
 
 .clear
